# common/api/client.go
@@ -39,7 +39,7 @@ type AdminGroupResponse struct {
 func GetServiceStatus(serviceName string) (bool, string) {
 	apiVersion := "1"
 
-	req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+common.Config.Identifier+"/"+serviceName, nil)
+	req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"/hosts/"+common.Config.Identifier+"/"+serviceName, nil)
 
 	if err != nil {
 		common.LogError(err.Error())
@@ -148,7 +148,7 @@ func GetOS() string {
 }
 
 func GetReq(apiVersion string) (map[string]interface{}, error) {
-	req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+common.Config.Identifier, nil)
+	req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"hosts/"+common.Config.Identifier, nil)
 
 	if err != nil {
 		common.LogError(err.Error())
@@ -221,7 +221,7 @@ func SendReq(apiVersion string) {
 	hostJson, _ := json.Marshal(host)
 
 	// Send the response to the API
-	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"/hostsList", bytes.NewBuffer(hostJson))
+	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"hosts", bytes.NewBuffer(hostJson))
 
 	if err != nil {
 		common.LogError(err.Error())
@@ -257,10 +257,10 @@ func SendReq(apiVersion string) {
 }
 
 func GetHosts(apiVersion string, hostName string) []Host {
-	// if hostName is empty, use /api/v1/hostsList
-	// if hostName is not empty, use /api/v1/hostsList/{hostName}
+	// if hostName is empty, use /api/v1hosts
+	// if hostName is not empty, use /api/v1hosts/{hostName}
 	if hostName != "" {
-		req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+hostName, nil)
+		req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"hosts/"+hostName, nil)
 
 		if err != nil {
 			common.LogError(err.Error())
@@ -286,7 +286,7 @@ func GetHosts(apiVersion string, hostName string) []Host {
 
 		return []Host{host}
 	} else {
-		req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"/hostsList", nil)
+		req, err := http.NewRequest("GET", ClientConf.URL+"/api/v"+apiVersion+"hosts", nil)
 
 		if err != nil {
 			common.LogError(err.Error())
@@ -350,8 +350,8 @@ func GetHostsPretty(hosts []Host) {
 }
 
 func SendUpdateTo(apiVersion string, hostName string, versionTo string) {
-	// POST /api/v1/hostsList/{hostName}/updateTo/{versionTo}
-	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+hostName+"/updateTo/"+versionTo, nil)
+	// POST /api/v1hosts/{hostName}/updateTo/{versionTo}
+	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"hosts/"+hostName+"/updateTo/"+versionTo, nil)
 
 	if err != nil {
 		common.LogError(err.Error())
@@ -375,9 +375,9 @@ func SendUpdateTo(apiVersion string, hostName string, versionTo string) {
 }
 
 func SendDisable(apiVersion string, hostName string, component string) {
-	// POST /api/v1/hostsList/{hostName}/disable/{component}
+	// POST /api/v1hosts/{hostName}/disable/{component}
 
-	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+hostName+"/disable/"+component, nil)
+	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"hosts/"+hostName+"/disable/"+component, nil)
 
 	if err != nil {
 		common.LogError(err.Error())
@@ -411,8 +411,8 @@ func SendDisable(apiVersion string, hostName string, component string) {
 }
 
 func SendEnable(apiVersion string, hostName string, component string) {
-	// POST /api/v1/hostsList/{hostName}/enable/{component}
-	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"/hostsList/"+hostName+"/enable/"+component, nil)
+	// POST /api/v1hosts/{hostName}/enable/{component}
+	req, err := http.NewRequest("POST", ClientConf.URL+"/api/v"+apiVersion+"hosts/"+hostName+"/enable/"+component, nil)
 
 	if err != nil {
 		common.LogError(err.Error())
